service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: de-paladins-inn
    delete: de-paladins-inn-app
  name: de-paladins-inn-stage-app
  namespace: blogs
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: de-paladins-inn
    deploymentconfig: de-paladins-inn-stage-app
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
  type: ClusterIP
